Fix data type selection issue for numeric type, fix overflow issue

--- a/www/palladio-metavis-component.css
+++ b/www/palladio-metavis-component.css
@@ -13,3 +13,10 @@
   max-width: 200px;
   display: inline-block;
 }
+
+[data-palladio-metavis] .field-description {
+  margin-top: 3px;
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
